--- a/app.html
+++ b/app.html
@@ -14,14 +14,14 @@
         <p>
             <label for="new-task">Add Item</label>
             <input id="new-task" type="text" placeholder="title">
-            <textarea id="new-description" name="description" placeholder="description" rows="8"></textarea>
-            <input type="date" name="startDate" value="">
-            <input type="date" name="endDate" value="">
-            <select class="priority" name="priority">
+            <!-- <textarea id="new-description" name="description" placeholder="description" rows="8"></textarea>
+            <input id="start-date" type="date" name="startDate" value="">
+            <input id="end-date" type="date" name="endDate" value="">
+            <select id="priority" name="priority">
                 <option value="high">high</option>
                 <option value="medium">medium</option>
                 <option value="low">low</option>
-            </select>
+            </select> -->
             <button id="add">Add</button>
         </p>
 
